# browser-selector

./: .gitmodules  CMakeLists.txt  README.md  browser-selector.desktop  build-release.sh
libs/: CMakeLists.txt
src/: CMakeLists.txt  browser.hpp  config.cpp  config.hpp  main.cpp  selection-window-ui.cpp  selection-window.cpp  selection-window.hpp
